# parity-ha-runtime

./: .gitignore  Cargo.toml  README.md  double_build
docs/: mini-req.txt  requirements.md  requirements.txt
runtime/: Cargo.toml
runtime/json_data/: data.json
runtime/src/: cat_auction.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
scripts/: double_build  init.sh  run  test_runtime
src/: chain_spec.rs  main.rs  service.rs
