[profile.release]
lto = true
panic = 'abort'
[dependencies.chain01-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['chain01-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'chain01-runtime-wasm'
version = '1.0.0'
