[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'ha-runtime-wasm'
version = '1.0.0'

[profile.release]
lto = true
panic = 'abort'

[dependencies.ha-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['ha-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

